[gd_scene load_steps=36 format=2]

[ext_resource path="res://Assets/Sprites/Coin/coin_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://Assets/resources/SF Atarian System.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Sprites/Player/Idle/vita/tile000.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Player/Idle/vita/tile002.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Player/Idle/vita/tile001.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Player/Idle/tard/tile002.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Player/Idle/tard/tile000.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Player/Idle/tard/tile001.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Player/Idle/tard/tile003.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Player/Idle/mort/tile001.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Player/Idle/mort/tile000.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Player/Idle/mort/tile003.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Player/Idle/mort/tile002.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Player/Idle/doux/tile002.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Player/Idle/doux/tile000.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/Player/Idle/doux/tile001.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/Player/Idle/doux/tile003.png" type="Texture" id=18]
[ext_resource path="res://Scripts/Store.gd" type="Script" id=19]
[ext_resource path="res://Assets/resources/button_theme.tres" type="StyleBox" id=20]
[ext_resource path="res://Assets/resources/button_theme_pressed.tres" type="StyleBox" id=21]
[ext_resource path="res://Assets/resources/button_theme_hover.tres" type="StyleBox" id=22]
[ext_resource path="res://Assets/Sprites/Sky.png" type="Texture" id=23]
[ext_resource path="res://Assets/resources/ground.tres" type="TileSet" id=24]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="AnimatedTexture" id=4]
frames = 4
fps = 6.0
frame_0/texture = ExtResource( 4 )
frame_1/texture = ExtResource( 6 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 5 )
frame_2/delay_sec = 0.0
frame_3/delay_sec = 0.0

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="AnimatedTexture" id=6]
frames = 4
fps = 6.0
frame_0/texture = ExtResource( 8 )
frame_1/texture = ExtResource( 9 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 7 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 10 )
frame_3/delay_sec = 0.0

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="AnimatedTexture" id=8]
frames = 4
fps = 6.0
frame_0/texture = ExtResource( 12 )
frame_1/texture = ExtResource( 11 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 14 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 13 )
frame_3/delay_sec = 0.0

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="AnimatedTexture" id=10]
frames = 4
fps = 6.0
frame_0/texture = ExtResource( 16 )
frame_1/texture = ExtResource( 17 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 15 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 18 )
frame_3/delay_sec = 0.0

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=12]
resource_name = "not_enough_coins_anim"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Padding/HBoxContainer/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.482353, 0.482353, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.482353, 0.482353, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Store" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sky" type="Sprite" parent="."]
scale = Vector2( 0.9375, 0.9375 )
texture = ExtResource( 23 )
centered = false
vframes = 2

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.3125
custom_constants/margin_right = 50
custom_constants/margin_top = 20
custom_constants/margin_left = 50
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="Padding"]
margin_left = 50.0
margin_top = 20.0
margin_right = 550.0
margin_bottom = 73.0

[node name="TextureRect" type="TextureRect" parent="Padding/HBoxContainer"]
margin_right = 35.0
margin_bottom = 53.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 1 )
stretch_mode = 6

[node name="Label" type="Label" parent="Padding/HBoxContainer"]
margin_left = 39.0
margin_top = 10.0
margin_right = 52.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="Padding"]
margin_left = 50.0
margin_top = 20.0
margin_right = 550.0
margin_bottom = 73.0
alignment = 2

[node name="Back" type="Button" parent="Padding/HBoxContainer2"]
margin_left = 412.0
margin_right = 500.0
margin_bottom = 53.0
custom_styles/hover = ExtResource( 22 )
custom_styles/pressed = ExtResource( 21 )
custom_styles/focus = ExtResource( 20 )
custom_styles/normal = ExtResource( 20 )
custom_fonts/font = SubResource( 2 )
text = "   GO BACK   "

[node name="Padding2" type="MarginContainer" parent="."]
anchor_top = 0.3375
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="Padding2"]
margin_right = 600.0
margin_bottom = 198.0
rect_clip_content = true
custom_constants/separation = 25
alignment = 1

[node name="Vita" type="VBoxContainer" parent="Padding2/HBoxContainer"]
margin_left = 102.0
margin_right = 182.0
margin_bottom = 198.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Padding2/HBoxContainer/Vita"]
margin_right = 80.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "VITA"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Padding2/HBoxContainer/Vita"]
margin_top = 37.0
margin_right = 80.0
margin_bottom = 117.0
rect_min_size = Vector2( 55, 80 )
texture = SubResource( 4 )
stretch_mode = 6

[node name="VitaButton" type="Button" parent="Padding2/HBoxContainer/Vita"]
margin_top = 121.0
margin_right = 80.0
margin_bottom = 146.0
rect_min_size = Vector2( 80, 25 )
custom_styles/hover = ExtResource( 22 )
custom_styles/pressed = ExtResource( 21 )
custom_styles/focus = ExtResource( 20 )
custom_styles/disabled = ExtResource( 21 )
custom_styles/normal = ExtResource( 20 )
custom_fonts/font = SubResource( 5 )

[node name="Tard" type="VBoxContainer" parent="Padding2/HBoxContainer"]
margin_left = 207.0
margin_right = 287.0
margin_bottom = 198.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabeL" type="Label" parent="Padding2/HBoxContainer/Tard"]
margin_right = 80.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "TARD"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Padding2/HBoxContainer/Tard"]
margin_top = 37.0
margin_right = 80.0
margin_bottom = 117.0
rect_min_size = Vector2( 0, 80 )
texture = SubResource( 6 )
stretch_mode = 6

[node name="TardButton" type="Button" parent="Padding2/HBoxContainer/Tard"]
margin_top = 121.0
margin_right = 80.0
margin_bottom = 146.0
rect_min_size = Vector2( 80, 25 )
custom_styles/hover = ExtResource( 22 )
custom_styles/pressed = ExtResource( 21 )
custom_styles/focus = ExtResource( 20 )
custom_styles/disabled = ExtResource( 21 )
custom_styles/normal = ExtResource( 20 )
custom_fonts/font = SubResource( 7 )

[node name="Mort" type="VBoxContainer" parent="Padding2/HBoxContainer"]
margin_left = 312.0
margin_right = 392.0
margin_bottom = 198.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabeL" type="Label" parent="Padding2/HBoxContainer/Mort"]
margin_right = 80.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "MORT"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Padding2/HBoxContainer/Mort"]
margin_top = 37.0
margin_right = 80.0
margin_bottom = 117.0
rect_min_size = Vector2( 80, 80 )
texture = SubResource( 8 )
stretch_mode = 6

[node name="MortButton" type="Button" parent="Padding2/HBoxContainer/Mort"]
margin_top = 121.0
margin_right = 80.0
margin_bottom = 146.0
rect_min_size = Vector2( 80, 25 )
custom_styles/hover = ExtResource( 22 )
custom_styles/pressed = ExtResource( 21 )
custom_styles/focus = ExtResource( 20 )
custom_styles/disabled = ExtResource( 21 )
custom_styles/normal = ExtResource( 20 )
custom_fonts/font = SubResource( 9 )

[node name="Doux" type="VBoxContainer" parent="Padding2/HBoxContainer"]
margin_left = 417.0
margin_right = 497.0
margin_bottom = 198.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabeL2" type="Label" parent="Padding2/HBoxContainer/Doux"]
margin_right = 80.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "DOUX"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Padding2/HBoxContainer/Doux"]
margin_top = 37.0
margin_right = 80.0
margin_bottom = 117.0
rect_min_size = Vector2( 80, 80 )
texture = SubResource( 10 )
stretch_mode = 6

[node name="DouxButton" type="Button" parent="Padding2/HBoxContainer/Doux"]
margin_top = 121.0
margin_right = 80.0
margin_bottom = 146.0
rect_min_size = Vector2( 80, 25 )
custom_styles/hover = ExtResource( 22 )
custom_styles/pressed = ExtResource( 21 )
custom_styles/focus = ExtResource( 20 )
custom_styles/disabled = ExtResource( 21 )
custom_styles/normal = ExtResource( 20 )
custom_fonts/font = SubResource( 11 )

[node name="LongGrassFloor" type="Node2D" parent="."]
position = Vector2( 72, 224 )

[node name="TileMap" type="TileMap" parent="LongGrassFloor"]
tile_set = ExtResource( 24 )
cell_size = Vector2( 32, 32 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 2, 65536, 0, 65536, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 65549, 0, 65538, 131072, 3, 2, 131073, 3, 5, 131074, 3, 5, 131075, 3, 5, 131076, 3, 5, 131077, 3, 5, 131078, 3, 5, 131079, 3, 5, 131080, 3, 5, 131081, 3, 5, 131082, 3, 5, 131083, 3, 5, 131084, 3, 5, 131085, 3, 3, 196608, 2, 0, 196609, 2, 1, 196610, 2, 1, 196611, 2, 1, 196612, 2, 1, 196613, 2, 1, 196614, 2, 1, 196615, 2, 1, 196616, 2, 1, 196617, 2, 1, 196618, 2, 1, 196619, 2, 1, 196620, 2, 1, 196621, 2, 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/not_enough_coins_anim = SubResource( 12 )
[connection signal="pressed" from="Padding/HBoxContainer2/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Padding2/HBoxContainer/Vita/VitaButton" to="." method="_on_VitaButton_pressed"]
[connection signal="pressed" from="Padding2/HBoxContainer/Tard/TardButton" to="." method="_on_TardButton_pressed"]
[connection signal="pressed" from="Padding2/HBoxContainer/Mort/MortButton" to="." method="_on_MortButton_pressed"]
[connection signal="pressed" from="Padding2/HBoxContainer/Doux/DouxButton" to="." method="_on_DouxButton_pressed"]
